--- a/Tournament/Views/Home/Index.cshtml
+++ b/Tournament/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <h1>Gerenciamento de Torneios</h1>
     <hr />
 
-    <div class="col-md-4">
+    <div class="col-md-4 well">
         <h2>Controle de Torneio</h2>
         <ul>
             <li><a href="#">Gerenciar Torneios</a></li>
@@ -16,14 +16,14 @@
         </ul>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 well">
         <h2>Controle de Times</h2>
         <ul>
             <li><a href="#">Gerenciar Times</a></li>
         </ul>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4 well">
         <h2>Controle de Jogadores</h2>
         <ul>
             <li><a href="#">Gerenciar Jogadores</a></li>
